--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,7 @@ services:
       - .env
 
   db:
-    image: mariadb:11.8  # La dernière LTS (Stable & Récente)
+    image: mariadb:11.8
     restart: always
     environment:
       MYSQL_ROOT_PASSWORD: rootpassword
@@ -20,6 +20,8 @@ services:
       MYSQL_PASSWORD: user_password
     volumes:
       - db_data:/var/lib/mysql
+      # 👇 C'EST ICI LA MAGIE : On injecte le SQL d'init
+      - ./config/setup.sql:/docker-entrypoint-initdb.d/init.sql
 
   mailhog:
     image: mailhog/mailhog
