--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 # --- 1. Sécurité & Environnement ---
-# Le fichier .env contient tes mots de passe BDD, ne jamais le commiter !
+# Le fichier .env contient les mots de passe BDD, ne jamais le commiter !
 .env
 
-# Si tu crées des fichiers de config locaux pour tester
+# Si création de fichiers de config locaux pour tester
 config/config.local.php
 
 # --- 2. Contenu Utilisateur (Uploads) ---
@@ -26,5 +26,5 @@ Thumbs.db
 .idea/
 
 # --- 5. Dépendances (Optionnel) ---
-# Si tu utilises Composer à l'avenir
+# Si utilisation de  Composer à l'avenir (pour l'autoloader)
 /vendor/
